@@ -12,10 +12,6 @@ CONFIG_HOST_LINUX=y
 # CONFIG_HOST_OSX is not set
 # CONFIG_HOST_WINDOWS is not set
 # CONFIG_HOST_OTHER is not set
-# CONFIG_WINDOWS_NATIVE is not set
-# CONFIG_WINDOWS_CYGWIN is not set
-# CONFIG_WINDOWS_MSYS is not set
-# CONFIG_WINDOWS_OTHER is not set
 
 #
 # Build Configuration
@@ -109,16 +105,10 @@ CONFIG_ARCH_HAVE_MPU=y
 #
 # ARMV7M Configuration Options
 #
-# CONFIG_ARMV7M_TOOLCHAIN_ATOLLIC is not set
 CONFIG_ARMV7M_TOOLCHAIN_BUILDROOT=y
 # CONFIG_ARMV7M_TOOLCHAIN_CODEREDL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODEREDW is not set
 # CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_DEVKITARM is not set
 # CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_RAISONANCE is not set
 # CONFIG_ARMV7M_OABI_TOOLCHAIN is not set
 # CONFIG_GPIO_IRQ is not set
 CONFIG_ARCH_HAVE_EXTNAND=y
@@ -214,7 +204,7 @@ CONFIG_SAM34_SPI0=y
 # CONFIG_SAM34_TWIS1 is not set
 CONFIG_SAM34_UART0=y
 # CONFIG_SAM34_UART1 is not set
-# CONFIG_SAM34_UDP is not set
+CONFIG_SAM34_UDP=y
 # CONFIG_SAM34_USART0 is not set
 CONFIG_SAM34_USART1=y
 # CONFIG_SAM34_WDT is not set
@@ -257,6 +247,10 @@ CONFIG_SAM34_EMAC_PHYSR_100HD=0x2
 CONFIG_SAM34_EMAC_PHYSR_10FD=0x5
 CONFIG_SAM34_EMAC_PHYSR_100FD=0x6
 CONFIG_SAM34_EMAC_ISETH0=y
+
+#
+# AT91SAM3/4 USB Full Speed Device Controller driver (DCD) options
+#
 
 #
 # Architecture Options
@@ -349,8 +343,8 @@ CONFIG_TASK_NAME_SIZE=0
 # CONFIG_JULIAN_TIME is not set
 CONFIG_START_YEAR=2014
 CONFIG_START_MONTH=3
-CONFIG_START_DAY=10
-CONFIG_DEV_CONSOLE=y
+CONFIG_START_DAY=22
+# CONFIG_DEV_CONSOLE is not set
 # CONFIG_MUTEX_TYPES is not set
 # CONFIG_PRIORITY_INHERITANCE is not set
 # CONFIG_FDCLONE_DISABLE is not set
@@ -395,7 +389,7 @@ CONFIG_PREALLOC_TIMERS=4
 #
 # Stack and heap information
 #
-CONFIG_IDLETHREAD_STACKSIZE=1024
+CONFIG_IDLETHREAD_STACKSIZE=2048
 CONFIG_USERMAIN_STACKSIZE=2048
 CONFIG_PTHREAD_STACK_MIN=256
 CONFIG_PTHREAD_STACK_DEFAULT=2048
@@ -490,6 +484,7 @@ CONFIG_ETH0_PHY_KSZ8051=y
 # CONFIG_SERCOMM_CONSOLE is not set
 CONFIG_SERIAL=y
 # CONFIG_DEV_LOWCONSOLE is not set
+CONFIG_SERIAL_REMOVABLE=y
 # CONFIG_16550_UART is not set
 # CONFIG_ARCH_HAVE_UART is not set
 CONFIG_ARCH_HAVE_UART0=y
@@ -519,9 +514,9 @@ CONFIG_ARCH_HAVE_USART1=y
 CONFIG_USART1_ISUART=y
 CONFIG_MCU_SERIAL=y
 CONFIG_STANDARD_SERIAL=y
-CONFIG_UART0_SERIAL_CONSOLE=y
+# CONFIG_UART0_SERIAL_CONSOLE is not set
 # CONFIG_USART1_SERIAL_CONSOLE is not set
-# CONFIG_NO_SERIAL_CONSOLE is not set
+CONFIG_NO_SERIAL_CONSOLE=y
 
 #
 # UART0 Configuration
@@ -548,7 +543,47 @@ CONFIG_USART1_2STOP=0
 # CONFIG_USART1_OFLOWCONTROL is not set
 # CONFIG_SERIAL_IFLOWCONTROL is not set
 # CONFIG_SERIAL_OFLOWCONTROL is not set
-# CONFIG_USBDEV is not set
+CONFIG_USBDEV=y
+
+#
+# USB Device Controller Driver Options
+#
+# CONFIG_USBDEV_ISOCHRONOUS is not set
+# CONFIG_USBDEV_DUALSPEED is not set
+CONFIG_USBDEV_SELFPOWERED=y
+# CONFIG_USBDEV_BUSPOWERED is not set
+CONFIG_USBDEV_MAXPOWER=100
+# CONFIG_USBDEV_DMA is not set
+CONFIG_ARCH_USBDEV_STALLQUEUE=y
+# CONFIG_USBDEV_TRACE is not set
+
+#
+# USB Device Class Driver Options
+#
+# CONFIG_USBDEV_COMPOSITE is not set
+# CONFIG_PL2303 is not set
+CONFIG_CDCACM=y
+CONFIG_CDCACM_CONSOLE=y
+CONFIG_CDCACM_EP0MAXPACKET=64
+CONFIG_CDCACM_EPINTIN=1
+CONFIG_CDCACM_EPINTIN_FSSIZE=64
+CONFIG_CDCACM_EPINTIN_HSSIZE=64
+CONFIG_CDCACM_EPBULKOUT=2
+CONFIG_CDCACM_EPBULKOUT_FSSIZE=64
+CONFIG_CDCACM_EPBULKOUT_HSSIZE=512
+CONFIG_CDCACM_EPBULKIN=3
+CONFIG_CDCACM_EPBULKIN_FSSIZE=64
+CONFIG_CDCACM_EPBULKIN_HSSIZE=512
+CONFIG_CDCACM_NWRREQS=4
+CONFIG_CDCACM_NRDREQS=4
+CONFIG_CDCACM_BULKIN_REQLEN=96
+CONFIG_CDCACM_RXBUFSIZE=256
+CONFIG_CDCACM_TXBUFSIZE=256
+CONFIG_CDCACM_VENDORID=0x0525
+CONFIG_CDCACM_PRODUCTID=0xa4a7
+CONFIG_CDCACM_VENDORSTR="NuttX"
+CONFIG_CDCACM_PRODUCTSTR="CDC/ACM Serial"
+# CONFIG_USBMSC is not set
 # CONFIG_USBHOST is not set
 # CONFIG_WIRELESS is not set
 
@@ -639,7 +674,9 @@ CONFIG_FAT_MAXFNAME=32
 # System Logging
 #
 # CONFIG_SYSLOG_ENABLE is not set
-# CONFIG_SYSLOG is not set
+CONFIG_SYSLOG=y
+CONFIG_SYSLOG_CHAR=y
+CONFIG_SYSLOG_DEVPATH="/dev/ttyS0"
 
 #
 # Graphics Support
@@ -894,6 +931,7 @@ CONFIG_NSH_NESTDEPTH=3
 # CONFIG_NSH_DISABLE_LOOPS is not set
 # CONFIG_NSH_DISABLEBG is not set
 CONFIG_NSH_CONSOLE=y
+# CONFIG_NSH_USBCONSOLE is not set
 
 #
 # USB Trace Support
@@ -931,6 +969,7 @@ CONFIG_NSH_MAX_ROUNDTRIP=20
 #
 # USB CDC/ACM Device Commands
 #
+# CONFIG_SYSTEM_CDCACM is not set
 
 #
 # USB Composite Device Commands
