@@ -1592,7 +1592,7 @@ Where <subdir> is one of the following:
        those are that you cannot get debug output from interrupt handlers.
        So, in particularly, debug output is not a useful way to debug the
        USB device controller driver.  Instead, use the USB monitor with
-       USB debug off and USB trance on (see below).
+       USB debug off and USB trace on (see below).
 
     4. Enabling USB monitor SYSLOG output.  If tracing is enabled, the USB
        device will save encoded trace output in in-memory buffer; if the
